Changelog
=========


2.11.1 (unreleased)
-------------------

- Make sure remove_broken_browserlayer() helper doesn't fail if the browser
  layer registration to be removed doesn't exist (any more). [lgraf]


2.11.0 (2018-01-31)
-------------------

- Provide upgrade step handler interfaces and handler class in wrapper. [jone]
- Do not propose executed upgrades newer than current db version. [jone]

2.10.0 (2018-01-08)
-------------------

- Support installing proposed upgrades of specific Generic Setup profiles.
  Use ``bin/upgrade install --proposed the.package:default``. [jone]

2.9.0 (2017-12-14)
------------------

- Optimize memory footprint after every upgrade step. [jone]
- Reduce memory footprint in SavepointIterator by garbage-collecting connection cache. [jone]
- Set the default savepoint threshold to 1000; make it configurable. [jone]
- Enable savepoint iterator by default. Affects ``self.objects``. [jone]
- Use a SavepointIterator in the WorkflowSecurityUpdater in order not to exceed
  memory. [mbaechtold]


2.8.1 (2017-10-13)
------------------

- Also catch AttributeErrors when accessing objects of broken brains. [buchi]


2.8.0 (2017-07-27)
------------------

- The upgrade step methods will remove and skip broken catalog brains. [jone]


2.7.2 (2017-07-13)
------------------

- Fix encoding issues in ASCII terminals. [jone]


2.7.1 (2017-06-28)
------------------

- Fix tempfile authentication when created by different user. [jone]


2.7.0 (2017-06-28)
------------------

- Support using ``bin/upgrade`` by another user than the Zope server
  with less strict security checks.[jone]


2.6.1 (2017-06-28)
------------------

- Fix a bug which caused ``bin/upgrade`` to fail when the ``var`` directory
  had the setguid flag active. [jone]


2.6.0 (2017-06-08)
------------------

- Log (re/un)-indexing progress if collective.indexing is installed. [deiferni]


2.5.0 (2017-06-07)
------------------

- Add support for Plone 5.1. [jone]


2.4.0 (2017-06-07)